Commit all files